# fhir-gateway

./: .dockerignore  .env.example  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  server.json
.github/workflows/: ci.yml
app/: __init__.py  audit.py  constants.py  errors.py  main.py  rate_limiter.py  utils.py  validation.py
app/adapters/: __init__.py  base.py  generic.py  registry.py
app/auth/: __init__.py  identity.py  scope_validator.py  secure_token_store.py  smart.py  token_manager.py
app/config/: __init__.py  defaults.py  logging.py  platform.py  settings.py
app/mcp/: __init__.py  auth_handle.py  errors.py  progress.py  prompts.py  resources.py  server.py  session.py  validation.py
app/middleware/: __init__.py  security.py
app/models/: __init__.py  auth.py  coverage.py  fhir.py  platform.py
app/routers/: __init__.py  auth.py  coverage.py  fhir.py  health.py  oauth.py  pages.py  platforms.py  session.py  validation.py
app/services/: __init__.py  coverage.py  fhir_client.py  oauth.py
app/transformers/: __init__.py  questionnaire.py
docs/: PLATFORMS.md  SECURITY.md
keycloak/: realm-export.json
scripts/: run_tests.py  verify_endpoints.py  verify_platforms.py
scripts/reports/: verification_report.md  verification_results.json
tests/: __init__.py  conftest.py  test_fhir.py
tests/contract/: __init__.py  test_api_responses.py  test_fhir_resources.py
tests/e2e/: __init__.py  test_fhir_sandbox.py
tests/performance/: __init__.py  test_benchmarks.py
tests/unit/: __init__.py  test_adapters.py  test_audit.py  test_coverage.py  test_errors.py  test_main.py  test_mcp_server.py  test_mcp_tools_auth.py  test_mcp_tools_fhir.py  (+13 more)
(+4 files in other folders)
