[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fhir-gateway"
version = "0.1.0"
description = "Standalone REST API gateway for FHIR operations with multi-payer routing"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "FHIR Gateway Authors" }
]
keywords = ["fhir", "healthcare", "api", "gateway", "oauth"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
]

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "fhirpy>=2.0.0",
    "aiohttp>=3.9.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "structlog>=24.1.0",
    "python-multipart>=0.0.6",
    "itsdangerous>=2.1.0",
    "redis>=5.0.0",
    "cryptography>=42.0.0",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "ruff>=0.2.0",
]

[project.scripts]
fhir-gateway = "app.main:run"
fhir-gateway-mcp = "app.main:run_mcp"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
